--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,27 @@ sudo: false
 language: android
 jdk: oraclejdk8
 
-env:
-  matrix:
-    - ANDROID_TARGET=android-15 ANDROID_ABI=armeabi-v7a
+# env:
+#   matrix:
+#     - ANDROID_TARGET=android-15 ANDROID_ABI=armeabi-v7a
 
 android:
   components:
     - build-tools-22.0.1
     - extra-android-m2repository
     - android-22
-    - sys-img-armeabi-v7a-android-15
+    # - sys-img-armeabi-v7a-android-15
 
 before_script:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  # - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  # - emulator -avd test -no-skin -no-audio -no-window &
+  # - android-wait-for-emulator
+  # - adb shell input keyevent 82 &
   - TERM=dumb
 
 script:
-  - ./gradlew test assemble connectedCheck jacocoTestReport
+  - ./gradlew test jacocoTestReport
+  # - ./gradlew test assemble connectedCheck jacocoTestReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
