--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,3 @@
-buildscript {
-    ext.kotlin_version = '0.13.1513'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'jacoco'
@@ -29,6 +19,12 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName '1.0'
+    }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
     }
 }
 
@@ -62,9 +58,10 @@ task jacocoTestReport(type: JacocoReport) {
                       'android/**/*.*']
 
     def debugTree = fileTree(dir: "$project.buildDir/intermediates/classes/debug", excludes: fileFilter)
-    def mainSrc = "$project.projectDir/src/main/java"
 
-    sourceDirectories = files([mainSrc])
+    sourceDirectories = files([
+            "$project.projectDir/src/main/java",
+            "$project.projectDir/src/main/kotlin"])
     classDirectories = files([debugTree])
     executionData = fileTree(dir: project.projectDir, includes: ['**/*.exec', '**/*.ec'])
 
