--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:cardview-v7:$support_version"
+    compile "com.android.support:recyclerview-v7:$support_version"
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'org.jetbrains.anko:anko-sdk15:0.7'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
