--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.channelsurfer.android" >
+    package="org.channelsurfer.android">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".posts.PostsActivity"
-            android:label="@string/app_name" >
+        android:label="@string/app_name">
+        <activity android:name=".posts.PostsActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".preferences.PreferencesActivity" android:label="@string/preference_title" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
