--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'jacoco'
 
 ext.build_tools_version = '23.0.1'
+ext.ormlite_version = '4.48'
 ext.sdk_version = build_tools_version.tokenize('.')[0].toInteger()
 ext.support_version = "$sdk_version.+"
 
@@ -41,10 +42,12 @@ dependencies {
     compile 'com.mikepenz:iconics-core:1.7.6@aar'
     compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
     compile 'com.mikepenz:community-material-typeface:1.2.64.1@aar'
-    compile 'nl.qbusict:cupboard:2.1.4'
+    compile "com.j256.ormlite:ormlite-android:$ormlite_version"
+    compile "com.j256.ormlite:ormlite-core:$ormlite_version"
     compile 'org.jetbrains.anko:anko-sdk15:0.7'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.ocpsoft.prettytime:prettytime:4.0.0.Final'
+    debugCompile 'im.dino:dbinspector:3.2.1@aar'
     testCompile('org.robolectric:robolectric:3.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
